--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,62 +1,44 @@
 @import "compass";
 
 @import "bootstrap";
-@import "bootflat";
+/* @import "bootflat"; */
+@import "local-variables";
+@import "home";
+@import "editing";
+
+@import "ruler";
+@import "guides";
 
 body{
     min-height: 100vh;
-    &.dragover .sprite-wrapper{
-        box-shadow: inset 0 3px 4px #888;
-    }
-}
-.content {
-    padding-top: 90px;
+    min-width: 100vw;
 
-    .sprite-wrapper{
-        position: relative;
-        display: inline-block;
-        min-height: calc(100vh - 150px);
-        min-width: 100%;
-        border-radius: 4px;
-
-        background-color: #fff;
-        background :{
+    &.checker {
+        background: {
+            color: #fff;
             image: url(/assets/paves.gif);
             repeat: repeat;
         }
-        padding: 1em;
-        .import{
-            input{
-                display: inline-block;
-            }
-        }
-        .sprite{
-            @include box-shadow(1px 1px 5px 2px #656565);
-        }
-        .sheet-rect, .sheet-guides{
-            position:absolute;
-            top: 1em;
-            left: 1em;
-            .rect{
-                position: absolute;
-                background: rgba(0, 255, 0, 0.8);
-            }
-            .line{
-                position: absolute;
-                background: transparent;
-                border-top: 1px solid red;
-                border-bottom: 1px solid red;
-                width: 800px;
-            }
-        }
-        canvas{
-            display: none;
-            &.show{
-                display: block;
-            }
-        }
-        .output{
+    }
 
+    .content {
+        padding-top: 4em;
+    }
+}
+
+.main {
+    position: relative;
+    padding: 0;
+
+    > div {
+        position: absolute;
+        display: none;
+        &.active {
+            display: block;
         }
+    }
+
+    > .navbar {
+        margin: 0;
     }
 }
