--- a/sass/_editing.scss
+++ b/sass/_editing.scss
@@ -5,11 +5,22 @@
         position: fixed;
         right: 10px;
         top: 100px;
+
+        .prefix-addon {
+            min-width: 140px;
+        }
+
+        input[type=number]{
+            text-align: right;
+        }
     }
 
     .editor {
         position: absolute;
         left: 15px;
+        padding-right: 500px;
+        padding-bottom: 300px;
+
 
         .sprite {
             @include box-shadow(1px 1px 5px 2px #656565);
